--- a/src/assets/scss/argon-dashboard/docs/_component-examples.scss
+++ b/src/assets/scss/argon-dashboard/docs/_component-examples.scss
@@ -4,6 +4,19 @@
 // Grid examples
 //
 
+.loading-spinner {
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  position: fixed;
+  background-color: rgba(255, 255, 255, 0.2);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 100;
+}
+
 .ct-example-row {
   .row {
     > .col,
