Changes navbar in mobile view to be sticky
Note: The sidebar becomes the Navbar in mobile view so I have changed the sidebar file

--- a/src/assets/scss/argon-dashboard/docs/_sidebar.scss
+++ b/src/assets/scss/argon-dashboard/docs/_sidebar.scss
@@ -28,6 +28,11 @@
     }
 }
 
+@media (max-width: 800px) {
+  .mt-sticky-7 {
+    margin-top: 5rem !important; }
+  }
+
 .toc-entry {
     display: block;
     font-size: 1rem;
